More refactoring of tests go get fewer warnings